# roogle

./: .gitignore  Cargo.toml  README.md  tmp.rs
examples/: main.rs
src/: lib.rs
src/cli/: mod.rs
src/collections/: mod.rs
src/collections/doubly_linked_list/: list_node.rs  mod.rs  sort.rs
src/collections/linked_list/: README.md  list_iter.rs  list_node.rs  mod.rs  sort.rs
src/crawler/: crawler.rs  fs_crawler.rs
src/indexer/: doc_index.rs  mem_index.rs
src/query_processor/: mod.rs  query_processor.rs
src/search_engine/: mod.rs
src/search_engine/crawler/: crawler.rs  fs_crawler.rs  mod.rs
src/search_engine/filters/: mod.rs  stop_words.rs
src/search_engine/indexer/: doc_index.rs  doc_table.rs  mem_index.rs  mod.rs
src/search_engine/query_processor/: intersect.rs  mod.rs  query_processor.rs  query_result.rs  query_token.rs
tests/collections/linked_list/: mod.rs
