[package]
name = "roogle"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.15", features = ["derive"] }
phf = { version = "0.11.0", features = ["macros"] }
simple_logger = "2.2.0"
log = "0.4"
